err/wofpy.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Flask-0.12.2.dist-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/WOFpy-2.3.0.egg-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/backports'...
Listing './lib/python3.5/site-packages/backports/configparser'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/configparser-3.5.0.egg-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/docopt-0.6.2.egg-info'...
Listing './lib/python3.5/site-packages/flask'...
Listing './lib/python3.5/site-packages/flask/ext'...
Listing './lib/python3.5/site-packages/itsdangerous-0.24.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/pytz'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Africa'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Argentina'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Indiana'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Kentucky'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/North_Dakota'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Antarctica'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Arctic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Asia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Atlantic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Australia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Brazil'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Canada'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Chile'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Etc'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Europe'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Indian'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Mexico'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Pacific'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/US'...
Listing './lib/python3.5/site-packages/pytz-2017.3.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/spyne'...
Listing './lib/python3.5/site-packages/spyne/auxproc'...
Listing './lib/python3.5/site-packages/spyne/client'...
Listing './lib/python3.5/site-packages/spyne/client/twisted'...
Listing './lib/python3.5/site-packages/spyne/const'...
Listing './lib/python3.5/site-packages/spyne/interface'...
Listing './lib/python3.5/site-packages/spyne/interface/wsdl'...
Listing './lib/python3.5/site-packages/spyne/interface/xml_schema'...
Listing './lib/python3.5/site-packages/spyne/model'...
Listing './lib/python3.5/site-packages/spyne/model/primitive'...
Listing './lib/python3.5/site-packages/spyne/protocol'...
Listing './lib/python3.5/site-packages/spyne/protocol/cloth'...
Listing './lib/python3.5/site-packages/spyne/protocol/dictdoc'...
Listing './lib/python3.5/site-packages/spyne/protocol/html'...
Listing './lib/python3.5/site-packages/spyne/protocol/soap'...
Listing './lib/python3.5/site-packages/spyne/server'...
Listing './lib/python3.5/site-packages/spyne/server/twisted'...
Listing './lib/python3.5/site-packages/spyne/store'...
Listing './lib/python3.5/site-packages/spyne/store/relational'...
Listing './lib/python3.5/site-packages/spyne/test'...
Listing './lib/python3.5/site-packages/spyne/test/interface'...
Listing './lib/python3.5/site-packages/spyne/test/interface/wsdl'...
Listing './lib/python3.5/site-packages/spyne/test/interop'...
Listing './lib/python3.5/site-packages/spyne/test/interop/server'...
Listing './lib/python3.5/site-packages/spyne/test/interop/server/soap11'...
Listing './lib/python3.5/site-packages/spyne/test/interop/server/soap12'...
Listing './lib/python3.5/site-packages/spyne/test/model'...
Listing './lib/python3.5/site-packages/spyne/test/multipython'...
Listing './lib/python3.5/site-packages/spyne/test/multipython/model'...
Listing './lib/python3.5/site-packages/spyne/test/protocol'...
Listing './lib/python3.5/site-packages/spyne/test/transport'...
Compiling './lib/python3.5/site-packages/spyne/test/transport/test_msgpack.py'...
***   File "./lib/python3.5/site-packages/spyne/test/transport/test_msgpack.py", line 57
    print repr(val)
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/spyne/util'...
Listing './lib/python3.5/site-packages/spyne/util/oset'...
Listing './lib/python3.5/site-packages/spyne-2.12.14.egg-info'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './lib/python3.5/site-packages/wof'...
Listing './lib/python3.5/site-packages/wof/apps'...
Listing './lib/python3.5/site-packages/wof/examples'...
Listing './lib/python3.5/site-packages/wof/examples/flask'...
Listing './lib/python3.5/site-packages/wof/examples/flask/cbi'...
Listing './lib/python3.5/site-packages/wof/examples/flask/odm2'...
Listing './lib/python3.5/site-packages/wof/examples/flask/odm2/measurement'...
Listing './lib/python3.5/site-packages/wof/examples/flask/odm2/timeseries'...
Listing './lib/python3.5/site-packages/wof/examples/flask/swis'...
Listing './lib/python3.5/site-packages/wof/examples/production_configs'...
Listing './lib/python3.5/site-packages/wof/flask'...
Listing './lib/python3.5/site-packages/wof/flask/templates'...
Listing './share'...
Listing './share/python-wheels'...
